--- a/wrangler.toml
+++ b/wrangler.toml
@@ -10,6 +10,6 @@ command = "cargo install -q worker-build && worker-build --release"
 build = { command = "cargo install -q worker-build && worker-build --dev" }
 
 [vars]
-UUID = "d0cca0ae-ff37-4ecd-a624-75129a94yumi"
+UUID = "9faf8d4c-aab1-4806-bb6f-1ab1bfa05ea4"
 MAIN_PAGE_URL = "https://raw.githubusercontent.com/nayumiwandi/Siren/refs/heads/master/web/index.html"
 SUB_PAGE_URL = "https://raw.githubusercontent.com/nayumiwandi/Siren/refs/heads/master/web/sub.html"
